--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,3 +35,63 @@
   year={2019},
   publisher={National Acad Sciences}
 }
+
+@inproceedings{wu2022granger,
+  title={Granger causal inference on DAGs identifies genomic loci regulating transcription},
+  author={Wu, Alexander P and Singh, Rohit and Berger, Bonnie},
+  booktitle={International Conference on Learning Representations},
+  year={2022}
+}
+
+@article{otto2023structural,
+  title={Structural and functional properties of mSWI/SNF chromatin remodeling complexes revealed through single-cell perturbation screens},
+  author={Otto, Jordan E and Ursu, Oana and Wu, Alexander P and Winter, Evan B and Cuoco, Michael S and Ma, Sai and Qian, Kristin and Michel, Brittany C and Buenrostro, Jason D and Berger, Bonnie and others},
+  journal={Molecular Cell},
+  volume={83},
+  number={8},
+  pages={1350--1367},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{
+wu2023causallyguided,
+title={Causally-guided Regularization of Graph Attention Improves Generalizability},
+author={Alexander P Wu and Thomas Markovich and Bonnie Berger and Nils Yannick Hammerla and Rohit Singh},
+journal={Transactions on Machine Learning Research},
+issn={2835-8856},
+year={2023},
+url={https://openreview.net/forum?id=iDNMZgjJuJ},
+note={}
+}
+
+@article{wu2023econometric,
+  title={An econometric lens resolves cell-state parallax},
+  author={Wu, Alexander Po-Yen and Singh, Rohit and Walsh, Christopher A and Berger, Bonnie},
+  journal={bioRxiv},
+  pages={2023--03},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{singh2022unraveling,
+  title={Unraveling causal gene regulation from the RNA velocity graph using Velorama},
+  author={Singh, Rohit and Wu, Alexander P and Mudide, Anish and Berger, Bonnie},
+  journal={bioRxiv},
+  pages={2022--10},
+  year={2022},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{wu2021bayesian,
+  title={Bayesian information sharing enhances detection of regulatory associations in rare cell types},
+  author={Wu, Alexander P and Peng, Jian and Berger, Bonnie and Cho, Hyunghoon},
+  journal={Bioinformatics},
+  volume={37},
+  number={Supplement\_1},
+  pages={i349--i357},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+
