--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -38,14 +38,14 @@
 
 @inproceedings{wu2022granger,
   title={Granger causal inference on DAGs identifies genomic loci regulating transcription},
-  author={Wu, Alexander P and Singh, Rohit and Berger, Bonnie},
+  author={Singh*, Rohit and Wu*, Alexander P and Berger, Bonnie},
   booktitle={International Conference on Learning Representations},
   year={2022}
 }
 
 @article{otto2023structural,
   title={Structural and functional properties of mSWI/SNF chromatin remodeling complexes revealed through single-cell perturbation screens},
-  author={Otto, Jordan E and Ursu, Oana and Wu, Alexander P and Winter, Evan B and Cuoco, Michael S and Ma, Sai and Qian, Kristin and Michel, Brittany C and Buenrostro, Jason D and Berger, Bonnie and others},
+  author={Otto*, Jordan E and Ursu*, Oana and Wu*, Alexander P and Winter, Evan B and Cuoco, Michael S and Ma, Sai and Qian, Kristin and Michel, Brittany C and Buenrostro, Jason D and Berger, Bonnie and Regev†, Aviv and Kadoch†, Cigall},
   journal={Molecular Cell},
   volume={83},
   number={8},
@@ -67,7 +67,7 @@ note={}
 
 @article{wu2023econometric,
   title={An econometric lens resolves cell-state parallax},
-  author={Wu, Alexander Po-Yen and Singh, Rohit and Walsh, Christopher A and Berger, Bonnie},
+  author={Wu, Alexander P and Singh, Rohit and Walsh, Christopher A and Berger, Bonnie},
   journal={bioRxiv},
   pages={2023--03},
   year={2023},
@@ -76,7 +76,7 @@ note={}
 
 @article{singh2022unraveling,
   title={Unraveling causal gene regulation from the RNA velocity graph using Velorama},
-  author={Singh, Rohit and Wu, Alexander P and Mudide, Anish and Berger, Bonnie},
+  author={Singh*, Rohit and Wu*, Alexander P and Mudide*, Anish and Berger, Bonnie},
   journal={bioRxiv},
   pages={2022--10},
   year={2022},
@@ -94,4 +94,22 @@ note={}
   publisher={Oxford University Press}
 }
 
+@article{pagant2015sec24,
+  title={Sec24 is a coincidence detector that simultaneously binds two signals to drive ER export},
+  author={Pagant, Silvere and Wu, Alexander and Edwards, Samuel and Diehl, Frances and Miller, Elizabeth A},
+  journal={Current Biology},
+  volume={25},
+  number={4},
+  pages={403--412},
+  year={2015},
+  publisher={Elsevier}
+}
 
+@article{wu2018reducing,
+  title={Reducing false positives in CRISPR/Cas9 screens from copy number variations},
+  author={Wu, Alexander and Xiao, Tengfei and Fei, Teng and Shirley Liu, X and Li, Wei},
+  journal={BioRxiv},
+  pages={247031},
+  year={2018},
+  publisher={Cold Spring Harbor Laboratory}
+}
