most recent changes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,24 +6,16 @@
 @article{wang2019integrative,
   title={Integrative analysis of pooled CRISPR genetic screens using MAGeCKFlute},
   author={Wang, Binbin and Wang, Mei and Zhang, Wubing and Xiao, Tengfei and Chen, Chen-Hao and Wu, Alexander and Wu, Feizhen and Traugh, Nicole and Wang, Xiaoqing and Li, Ziyi and others},
-  journal={Nature protocols},
+  journal={Nature Protocols},
   volume={14},
   number={3},
   pages={756--780},
   year={2019},
-  publisher={Nature Publishing Group UK London}
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s41596-018-0113-7},
+  preview={nature_protocols.jpg}
 }
 
-@article{wang2019integrative,
-  title={Integrative analysis of pooled CRISPR genetic screens using MAGeCKFlute},
-  author={Wang, Binbin and Wang, Mei and Zhang, Wubing and Xiao, Tengfei and Chen, Chen-Hao and Wu, Alexander and Wu, Feizhen and Traugh, Nicole and Wang, Xiaoqing and Li, Ziyi and others},
-  journal={Nature protocols},
-  volume={14},
-  number={3},
-  pages={756--780},
-  year={2019},
-  publisher={Nature Publishing Group UK London}
-}
 
 @article{fei2019deciphering,
   title={Deciphering essential cistromes using genome-wide CRISPR screens},
@@ -33,14 +25,16 @@
   number={50},
   pages={25186--25195},
   year={2019},
-  publisher={National Acad Sciences}
+  publisher={National Acad Sciences},
+  preview={pnas.jpg}
 }
 
 @inproceedings{wu2022granger,
   title={Granger causal inference on DAGs identifies genomic loci regulating transcription},
   author={Singh*, Rohit and Wu*, Alexander P and Berger, Bonnie},
   booktitle={International Conference on Learning Representations},
-  year={2022}
+  year={2022},
+  preview={iclr.png}
 }
 
 @article{otto2023structural,
@@ -51,18 +45,18 @@
   number={8},
   pages={1350--1367},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  preview={molecular_cell.png}
 }
 
-@article{
-wu2023causallyguided,
-title={Causally-guided Regularization of Graph Attention Improves Generalizability},
-author={Alexander P Wu and Thomas Markovich and Bonnie Berger and Nils Yannick Hammerla and Rohit Singh},
-journal={Transactions on Machine Learning Research},
-issn={2835-8856},
-year={2023},
-url={https://openreview.net/forum?id=iDNMZgjJuJ},
-note={}
+@article{wu2023causallyguided,
+  title={Causally-guided Regularization of Graph Attention Improves Generalizability},
+  author={Alexander P Wu and Thomas Markovich and Bonnie Berger and Nils Yannick Hammerla and Rohit Singh},
+  journal={Transactions on Machine Learning Research},
+  issn={2835-8856},
+  year={2023},
+  url={https://openreview.net/forum?id=iDNMZgjJuJ},
+  preview={tmlr.png}
 }
 
 @article{wu2023econometric,
@@ -71,7 +65,8 @@ note={}
   journal={bioRxiv},
   pages={2023--03},
   year={2023},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Cold Spring Harbor Laboratory},
+  preview={biorxiv.jpg}
 }
 
 @article{singh2022unraveling,
@@ -80,7 +75,8 @@ note={}
   journal={bioRxiv},
   pages={2022--10},
   year={2022},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Cold Spring Harbor Laboratory},
+  preview={biorxiv.jpg}
 }
 
 @article{wu2021bayesian,
@@ -91,7 +87,8 @@ note={}
   number={Supplement\_1},
   pages={i349--i357},
   year={2021},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  preview={bioinformatics.png}
 }
 
 @article{pagant2015sec24,
@@ -102,7 +99,8 @@ note={}
   number={4},
   pages={403--412},
   year={2015},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  preview={current_biology.png}
 }
 
 @article{wu2018reducing,
@@ -111,5 +109,6 @@ note={}
   journal={BioRxiv},
   pages={247031},
   year={2018},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Cold Spring Harbor Laboratory},
+  preview={biorxiv.jpg}
 }
