--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,7 @@
 
 @article{wu2023econometric,
   title={An econometric lens resolves cell-state parallax},
-  author={Wu, Alexander P and Singh, Rohit and Walsh, Christopher A and Berger, Bonnie},
+  author={Wu*, Alexander P and Singh*, Rohit and Walsh, Christopher A and Berger, Bonnie},
   journal={bioRxiv},
   pages={2023--03},
   year={2023},
