--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+# @string{aps = {American Physical Society,}}
 
 @article{wang2019integrative,
   title={Integrative analysis of pooled CRISPR genetic screens using MAGeCKFlute},
@@ -76,7 +76,7 @@
   pages={2022--10},
   year={2022},
   publisher={Cold Spring Harbor Laboratory},
-  preview={biorxiv.jpg}
+  preview={cell_systems.png}
 }
 
 @article{wu2021bayesian,
