updated velorama citation

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,13 +69,11 @@
   preview={biorxiv.jpg}
 }
 
-@article{singh2022unraveling,
-  title={Unraveling causal gene regulation from the RNA velocity graph using Velorama},
+@article{singh2022causal,
+  title={Causal gene regulatory analysis with RNA velocity reveals an interplay between slow and fast transcription factors},
   author={Singh*, Rohit and Wu*, Alexander P and Mudide*, Anish and Berger, Bonnie},
-  journal={bioRxiv},
-  pages={2022--10},
-  year={2022},
-  publisher={Cold Spring Harbor Laboratory},
+  journal={To appear in Cell Systems},
+  year={2023},
   preview={cell_systems.png}
 }
 
