--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,8 +72,9 @@
 @article{singh2022causal,
   title={Causal gene regulatory analysis with RNA velocity reveals an interplay between slow and fast transcription factors},
   author={Singh*, Rohit and Wu*, Alexander P and Mudide*, Anish and Berger, Bonnie},
-  journal={To appear in Cell Systems},
-  year={2023},
+  journal={Cell Systems},
+  year={2024},
+  url={https://www.cell.com/cell-systems/abstract/S2405-4712(24)00120-0}
   preview={cell_systems.png}
 }
 
