updated publications (fix)

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -74,7 +74,7 @@
   author={Singh*, Rohit and Wu*, Alexander P and Mudide*, Anish and Berger, Bonnie},
   journal={Cell Systems},
   year={2024},
-  url={https://www.cell.com/cell-systems/abstract/S2405-4712(24)00120-0}
+  url={https://www.cell.com/cell-systems/abstract/S2405-4712(24)00120-0},
   preview={cell_systems.png}
 }
 
