--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -63,13 +63,13 @@
   title={An econometric lens resolves cell-state parallax},
   author={Wu*, Alexander P and Singh*, Rohit and Walsh, Christopher A and Berger, Bonnie},
   journal={Nature Communications},
-  pages={2023--03},
+  pages={2025--03},
   year={2025},
   publisher={Nature Portfolio},
   preview={nature_comm.jpg}
 }
 
-@article{wu2023econometric,
+# @article{wu2023econometric,
   title={An econometric lens resolves cell-state parallax},
   author={Wu*, Alexander P and Singh*, Rohit and Walsh, Christopher A and Berger, Bonnie},
   journal={bioRxiv},
