updated nature comm logo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,7 +66,7 @@
   pages={2025--03},
   year={2025},
   publisher={Nature Portfolio},
-  preview={nature_comms.jpg}
+  preview={nature_comm.jpg}
 }
 
 @article{singh2022causal,
